// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should render with all props assigned 1`] = `
<div
  className="test-class visible"
>
  <div
    className="content"
  >
    Test
  </div>
</div>
`;

exports[`Drawer should render with required props 1`] = `
<div
  className="hidden"
>
  <div
    className="content"
  >
    Test
  </div>
</div>
`;
